force-app/main/default/objects/Project_Update__c/Project_Update__c.object-meta.xml
<CustomObject>
    <description>TMG USE ONLY: Used to capture project updates received both verbally and via email.</description>
    <label>Project Update</label>
    <nameField>
        <displayFormat>Update-{00000}</displayFormat>
        <label>Project Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>