force-app/main/default/objects/Project_Update__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Updates</relationshipLabel>
    <relationshipName>Project_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>