force-app/main/default/objects/Project_Update__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task</label>
    <referenceTo>Milestone1_Task__c</referenceTo>
    <relationshipLabel>Project Updates</relationshipLabel>
    <relationshipName>Project_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>