force-app/main/default/objects/Project_Update__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Pipeline Call</fullName>
            </value>
            <value>
                <fullName>Team Call</fullName>
            </value>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Verified in Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>