force-app/main/default/objects/Project_Update__c/recordTypes/BD_Updates.recordType-meta.xml
<RecordType>
    <fullName>BD_Updates</fullName>
    <active>true</active>
    <description>Used for all TMG opportunity updates</description>
    <label>BD Updates</label>
</RecordType>