force-app/main/default/objects/Project_Update__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Date__c</columns>
    <columns>Subject__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>TMG_Admin</group>
        <group>TMG_Analysts</group>
        <group>TMG_Client_Services_Team</group>
    </sharedTo>
</ListView>